--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://pawanrawal.com/"
+baseurl = "http://pawanrawal.github.io/"
 languageCode = "en-us"
 title = "Pawan's blog"
 theme = "hugo-cactus-theme"
